--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -36,6 +36,14 @@
 
                 </ul>
             </div>
+            <div class="col-lg-4 col-sm-6">
+                <h5 class="pb-3">Stay Connected</h5>
+                <p class="small">Enter your email address to receive exclusive offers and new updates </p>
+                <form action="" class="mb-3">
+
+                </form>
+            </div>
+
         </div>
     </div>
 
