--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,28 +1,40 @@
 <%- include('partials/header') -%>
     <h1>Hello From Hom Page</h1>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
+
+
+    <div class="container contact-form bg-dark">
+        <div class="contact-image">
+            <i class="ri-chat-3-line" style="color: #fff; font-size: 55px;"></i>
+            <form action="">
+                <h3 class="text-light">We would love to here your feedback</h3>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group mt-4">
+                            <input type="text" name="txtName" class="form-control" placeholder="Your Name" value="">
+                        </div>
+                        <div class="form-group mt-4">
+                            <input type="email" name="txtEmail" class="form-control" placeholder="Your Email" value="">
+                        </div>
+                        <div class="form-group mt-4">
+                            <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone" value="">
+                        </div>
+                        <div class="form-group mt-4">
+                            <input type="submit" name="txtSubmit" onclick="" class="btn-contact text-light bg-dark p-2"
+                                value="Send Message">
+                        </div>
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <textarea name="txtMsg" class="form-control" style="width: 100%; height: 150px;" id=""
+                                cols="30" rows="10"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
 
     <%- include('partials/footer') -%>
