--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -40,7 +40,13 @@
                 <h5 class="pb-3">Stay Connected</h5>
                 <p class="small">Enter your email address to receive exclusive offers and new updates </p>
                 <form action="" class="mb-3">
-
+                    <div class="input-group">
+                        <input type="email" class="form-control" name="email" placeholder="Email  Address">
+                        <div class="input-group-append">
+                            <button type="submit"
+                                class="btn bg-danger text-white text-uppercase font-bold">Subscribe</button>
+                        </div>
+                    </div>
                 </form>
             </div>
 
