--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
  margin: 0;
  padding: 0;
@@ -6,6 +7,7 @@
  html, body {
  width: 100%;
  height: 100%;
+ font-family: "Poppins", sans-serif !important;
 }
 .navbar-nav>.active>a {
     color: #fff;
@@ -43,4 +45,54 @@
 }
 .menu-item:hover {
     color: #eee !important;
+}
+
+input.form-control {
+    height: 40px !important;
+}
+.background-brand {
+    background-image: url(../images/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+/* Products */
+
+
+.products {
+    display: flex;
+    justify-content: start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.products li {
+    list-style-type: none;
+    padding: 0;
+    float: 0 1 34rem;
+    height: 25rem;
+    border-bottom: solid .1rem #318fb5;
+    margin: 15px 10px 15px 10px;
+}
+.product {
+    display: flex;
+    flex-direction: column;
+    width: 15rem;
+}
+
+.product-name {
+    font-weight: bold;
+    color: #318fb5;
+}
+.product-image {
+    max-width: 12rem;
+}
+.product-brand {
+    color: #808080;
+}
+.product-price {
+    font-weight: bold;
+
 }
