--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,39 +1,282 @@
 <%- include('partials/header') -%>
-    <h1>Hello From Hom Page</h1>
 
 
-    <div class="container contact-form bg-dark">
-        <div class="contact-image">
-            <i class="ri-chat-3-line" style="color: #fff; font-size: 55px;"></i>
-            <form action="">
-                <h3 class="text-light">We would love to here your feedback</h3>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group mt-4">
-                            <input type="text" name="txtName" class="form-control" placeholder="Your Name" value="">
-                        </div>
-                        <div class="form-group mt-4">
-                            <input type="email" name="txtEmail" class="form-control" placeholder="Your Email" value="">
-                        </div>
-                        <div class="form-group mt-4">
-                            <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone" value="">
-                        </div>
-                        <div class="form-group mt-4">
-                            <input type="submit" name="txtSubmit" onclick="" class="btn-contact text-light bg-dark p-2"
-                                value="Send Message">
-                        </div>
+    <div class="text-center background-brand pb-3">
+        <h1 class="pt-5">All Products</h1>
+        <p class="lead pb-5">Choose your product from the categories you like!</p>
 
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <textarea name="txtMsg" class="form-control" style="width: 100%; height: 150px;" id=""
-                                cols="30" rows="10"></textarea>
-                        </div>
-                    </div>
+        <form action="">
+            <div class="input-group mx-auto" style="max-width: 35rem;">
+                <input type="text" class="form-control" aria-describedby="basic-addon2"
+                    placeholder="Search For Your Products" name="brandname">
+                <div class="input-group-append ">
+                    <button class="btn btn-outline-secondary mb-5" type="submit">Search</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
+    <section class="bg-light">
+        <div class="row">
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="" style="text-decoration: none;">
+                                <img src="../images/pro1.jpg" alt="" class="product-image">
+                                <div class="row mt-2">
+                                    <div class="center-block col">
+                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
+                                            Title</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="col text-end mx-5 h5 center-block product-price">
+                                $10
+                            </div>
+                            <div class="product-brand">
+                                Brand <span class="font-weight-bold">Google</span>
+                            </div>
+                            <div class="product-brand">
+                                Category <span class="font-weight-bold">Category</span>
+                                <div class="product-brand">
+                                    Size <span class="font-weight-bold">200ML</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+
 
 
 
