hoem products page and single proeduct page done

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,256 +1,79 @@
 <%- include('partials/header') -%>
 
-
-    <div class="text-center background-brand pb-3">
-        <h1 class="pt-5">All Products</h1>
-        <p class="lead pb-5">Choose your product from the categories you like!</p>
-
-        <form action="">
-            <div class="input-group mx-auto" style="max-width: 35rem;">
-                <input type="text" class="form-control" aria-describedby="basic-addon2"
-                    placeholder="Search For Your Products" name="brandname">
-                <div class="input-group-append ">
-                    <button class="btn btn-outline-secondary mb-5" type="submit">Search</button>
-                </div>
-            </div>
-        </form>
-    </div>
-    <section class="bg-light">
+    <div
+        style="background: url(../images/bg.jpg); background-size: cover; background-position: center; height: 38vh; background-repeat: no-repeat; margin: 0;">
         <div class="row">
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <a href="" style="text-decoration: none;">
-                                <img src="../images/pro1.jpg" alt="" class="product-image">
-                                <div class="row mt-2">
-                                    <div class="center-block col">
-                                        <span name="inn" style="text-decoration: none;" class="product-name h6">Item
-                                            Title</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="col text-end mx-5 h5 center-block product-price">
-                                $10
-                            </div>
-                            <div class="product-brand">
-                                Brand <span class="font-weight-bold">Google</span>
-                            </div>
-                            <div class="product-brand">
-                                Category <span class="font-weight-bold">Category</span>
-                                <div class="product-brand">
-                                    Size <span class="font-weight-bold">200ML</span>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+            <div class="col col-md-6 text-center mx-auto">
+                <h1 class="p-4">Welcome to the E Commerce Website</h1>
+                <p>Checkout top quality items and exclusive offer</p>
             </div>
         </div>
+    </div>
+    <div class="row text-center m-0 p-2 bg-light">
+        <div class="col-4">
+            <p class="lead">Top Quility</p>
+        </div>
+        <div class="col-4">
+            <p class="lead">Fast Delivery</p>
+        </div>
+        <div class="col-4">
+            <p class="lead">Best- Price</p>
+        </div>
+    </div>
 
+    <section class="bg-light text-center-p-5">
+        <div class="container-fluid">
+            <div class="row text-muted text-center">
+                <div class="col m-4">
+                    <h1 class="display-4 mb04">Best Sellers</h1>
+                </div>
+                <p class="lead">Check out some of the best sellers item for 2020.</p>
+            </div>
+            <div class="row align-items-center text-center mx-auto">
+                <div class="col-lg-4 col-10 mx-auto">
+                    <div class="card card-1 text-dark my-4 mx-auto">
+                        <img class="mx-auto my-2" style="max-height: 200px; width:100%;" src="../images/pro1.jpg"
+                            alt="">
+                        <div class="card-body">
+                            <h5 class="text-uppercase font-weight-bold mb-3 card-list-item">Johnson Shampoo 400ML</h5>
+
+                            <form action="">
+                                <button type="submit" class="btn p-2 price-card-button btn-warning text-light">View
+                                    More</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-10 mx-auto">
+                    <div class="card card-1 text-dark my-4 mx-auto">
+                        <img class="mx-auto my-2" style="max-height: 200px; width:100%;" src="../images/pro1.jpg"
+                            alt="">
+                        <div class="card-body">
+                            <h5 class="text-uppercase font-weight-bold mb-3 card-list-item">Johnson Shampoo 400ML</h5>
+
+                            <form action="">
+                                <button type="submit" class="btn p-2 price-card-button btn-warning text-light">View
+                                    More</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-10 mx-auto">
+                    <div class="card card-1 text-dark my-4 mx-auto">
+                        <img class="mx-auto my-2" style="max-height: 200px; width:100%;" src="../images/pro1.jpg"
+                            alt="">
+                        <div class="card-body">
+                            <h5 class="text-uppercase font-weight-bold mb-3 card-list-item">Johnson Shampoo 400ML</h5>
+
+                            <form action="">
+                                <button type="submit" class="btn p-2 price-card-button btn-warning text-light">View
+                                    More</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
