--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div class="row text-light py-4">
             <div class="col-lg-4 col-sm-6">
                 <h5>About Us</h5>
-                <p class="small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, recusandae.</p>
+                <p class="small">Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Totam, recusandae.</p>
             </div>
             <div class="col-lg-2 col-sm-6">
                 <h5>Visit Us</h5>
@@ -38,7 +38,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <h5 class="pb-3">Stay Connected</h5>
-                <p class="small">Enter your email address to receive exclusive offers and new updates </p>
+                <p class="small">Enter your email address to receive <br>exclusive offers and new updates </p>
                 <form action="" class="mb-3">
                     <div class="input-group">
                         <input type="email" class="form-control" name="email" placeholder="Email  Address">
