--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,14 @@
 <%- include('partials/header') -%>
 
-    <div
-        style="background: url(../images/bg.jpg); background-size: cover; background-position: center; height: 38vh; background-repeat: no-repeat; margin: 0;">
+    <div style="background: url(../images/bg.jpg); background-size: cover; background-position: center; height: 40vh; background-repeat: no-repeat; margin: 0;">
         <div class="row">
-            <div class="col col-md-6 text-center mx-auto">
-                <h1 class="p-4">Welcome to the E Commerce Website</h1>
+            <div class="col col-md-6 text-center mx-auto p-5">
+                <h1 class="p-4">Welcome To The <br>ECommerce Website</h1>
                 <p>Checkout top quality items and exclusive offer</p>
             </div>
         </div>
     </div>
-    <div class="row text-center m-0 p-2 bg-light">
+    <div class="row text-center m-0 p-2 bg-white">
         <div class="col-4">
             <p class="lead">Top Quility</p>
         </div>
@@ -17,90 +16,51 @@
             <p class="lead">Fast Delivery</p>
         </div>
         <div class="col-4">
-            <p class="lead">Best- Price</p>
+            <p class="lead">Best Price</p>
         </div>
     </div>
 
-    <section class="bg-light text-center-p-5">
-        <div class="container-fluid">
-            <div class="row text-muted text-center">
-                <div class="col m-4">
-                    <h1 class="display-4 mb04">Best Sellers</h1>
-                </div>
-                <p class="lead">Check out some of the best sellers item for 2020.</p>
-            </div>
-            <div class="row align-items-center text-center mx-auto">
-                <div class="col-lg-4 col-10 mx-auto">
-                    <div class="card card-1 text-dark my-4 mx-auto">
-                        <img class="mx-auto my-2" style="max-height: 200px; width:100%;" src="../images/pro1.jpg"
-                            alt="">
-                        <div class="card-body">
-                            <h5 class="text-uppercase font-weight-bold mb-3 card-list-item">Johnson Shampoo 400ML</h5>
-
-                            <form action="">
-                                <button type="submit" class="btn p-2 price-card-button btn-warning text-light">View
-                                    More</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-10 mx-auto">
-                    <div class="card card-1 text-dark my-4 mx-auto">
-                        <img class="mx-auto my-2" style="max-height: 200px; width:100%;" src="../images/pro1.jpg"
-                            alt="">
-                        <div class="card-body">
-                            <h5 class="text-uppercase font-weight-bold mb-3 card-list-item">Johnson Shampoo 400ML</h5>
-
-                            <form action="">
-                                <button type="submit" class="btn p-2 price-card-button btn-warning text-light">View
-                                    More</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-10 mx-auto">
-                    <div class="card card-1 text-dark my-4 mx-auto">
-                        <img class="mx-auto my-2" style="max-height: 200px; width:100%;" src="../images/pro1.jpg"
-                            alt="">
-                        <div class="card-body">
-                            <h5 class="text-uppercase font-weight-bold mb-3 card-list-item">Johnson Shampoo 400ML</h5>
-
-                            <form action="">
-                                <button type="submit" class="btn p-2 price-card-button btn-warning text-light">View
-                                    More</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-fluid my-5">
+        <div class="row text-center">
+                <h2>Brands</h2>
+            <p class="lead text-secondary">Check out some of the best sellers item for 2020.</p>
         </div>
-    </section>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../images/1.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../images/1.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../images/1.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+    </div>
 
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-
-
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-    <hr>
-
-
-
+    
 
     <%- include('partials/footer') -%>
