--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,16 +9,16 @@
                 <h5>Visit Us</h5>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="#" class="footer-link">Home</a>
+                        <a href="#" class="footer-link text-decoration-none text-white">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="footer-link">About Us</a>
+                        <a href="#" class="footer-link text-decoration-none text-white">About Us</a>
                     </li>
                     <li>
-                        <a href="#" class="footer-link">Categories</a>
+                        <a href="#" class="footer-link text-decoration-none text-white">Categories</a>
                     </li>
                     <li>
-                        <a href="#" class="footer-link">Brands</a>
+                        <a href="#" class="footer-link text-decoration-none text-white">Brands</a>
                     </li>
 
                 </ul>
@@ -27,10 +27,10 @@
                 <h5 class="pb-3">Need Help</h5>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="#" class="footer-link">Contact Us</a>
+                        <a href="#" class="footer-link text-decoration-none text-white">Contact Us</a>
                     </li>
                     <li>
-                        <a href="mailto:ecom@ecoma.com" class="footer-link">ecom@ecoma.com</a>
+                        <a href="mailto:ecom@ecoma.com" class="footer-link text-decoration-none text-white">ecom@ecoma.com</a>
                     </li>
 
 
@@ -77,13 +77,7 @@
 
 
 
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
