--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,9 +7,7 @@
     <title>Technical Mickey | Ecom</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 <body>
 
@@ -50,7 +48,7 @@
                 <div class="col-lg-2">
                     <ul class="navbar-nav float-end">
                         <li class="nav-item">
-                            <a href="#" class="nav-link text-light signup">Sign Up</a>
+                            <a href="#" class="nav-link text-light signup fw-normal">Sign Up</a>
                         </li>
                     </ul>
                 </div>
@@ -89,7 +87,7 @@
                             <input type="email" name="username" id="" class="form-control my-2 p-2">
                         </div>
                         <div class="form-group py-2">
-                            <label for="password class=" label">Password</label>
+                            <label for="password">Password</label>
                             <input type="password" name="password" id="" class="form-control my-2 p-2">
                         </div>
                     </div>
