--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,6 +61,43 @@
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    
+    <div class="container-fluid">
+        <div class="row p-4">
+            <div class="col-lg-6 bg-light p-3">
+                <form action="">
+                    <h3>Add Category</h3>
+                    <label for="">Category Name</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <label for="">Category Image</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Image Url">
+                    </div>
+                    <div>
+                        <button class="btn btn-dark">Submit</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-lg-6 bg-dark text-white p-3">
+                <form action="">
+                    <h3>Add Brand</h3>
+                    <label for="">Brand Name</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <label for="">Brand Image</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Image Url">
+                    </div>
+                    <div>
+                        <button class="btn btn-light">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
 
     <%- include('partials/footer') -%>
