--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,6 +96,132 @@
                 </form>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6 bg-dark text-light p-3">
+                <form action="">
+                    <h3>Add Item</h3>
+                    <label for="name">Item Name</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="name" placeholder="Name">
+                    </div>
+                    <label for="name">Item Description</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="name" placeholder="Description">
+                    </div>
+                    <label for="name">Item Category</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="category" placeholder="Category">
+                    </div>
+                    <label for="name">Item Brand</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="brand" placeholder="Brand">
+                    </div>
+                    <label for="name">Item Image</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="brand" placeholder="Brand">
+                    </div>
+                    <label for="name">Item Quantity</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="brand" placeholder="Brand">
+                    </div>
+                    <label for="name">Item Price</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="brand" placeholder="Brand">
+                    </div>
+                    <label for="name">Item Size</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="brand" placeholder="Brand">
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <button type="submit" class="btn btn-light">Submit</button>
+                        </div>
+                        <div class="col-6 floar-right">
+                            <form action="">
+                                <button class="btn btn-light float-end">View All Items</button>
+                            </form>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6 scroll">
+                <h1>Orders</h1>
+                <div class="card">
+                    <form action="">
+                        <div class="card-header bg-warning text-dark">
+                            Order #01
+                            <p class="card-text float-end">Total Price: $75</p>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="card-title">
+                                        Samosa
+                                    </div>
+                                    <p class="card-text">Bhopal</p>
+                                    <p class="card-text">21/04/2024</p>
+                                    <p class="card-text">444-444-44444</p>
+                                    
+                                </div>
+                                <div class="col-6">
+                                    <button type="submit" class="btn btn-primary float-end">See Full Order</button>
+                                </div>
+                                
+                            </div>
+                            
+                        </div>
+                    </form>
+                    <form action="">
+                        <div class="card-header bg-warning text-dark">
+                            Order #01
+                            <p class="card-text float-end">Total Price: $75</p>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="card-title">
+                                        Samosa
+                                    </div>
+                                    <p class="card-text">Bhopal</p>
+                                    <p class="card-text">21/04/2024</p>
+                                    <p class="card-text">444-444-44444</p>
+                                    
+                                </div>
+                                <div class="col-6">
+                                    <button type="submit" class="btn btn-primary float-end">See Full Order</button>
+                                </div>
+                                
+                            </div>
+                            
+                        </div>
+                    </form>
+                    <form action="">
+                        <div class="card-header bg-warning text-dark">
+                            Order #01
+                            <p class="card-text float-end">Total Price: $75</p>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="card-title">
+                                        Samosa
+                                    </div>
+                                    <p class="card-text">Bhopal</p>
+                                    <p class="card-text">21/04/2024</p>
+                                    <p class="card-text">444-444-44444</p>
+                                    
+                                </div>
+                                <div class="col-6">
+                                    <button type="submit" class="btn btn-primary float-end">See Full Order</button>
+                                </div>
+                                
+                            </div>
+                            
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
 
